# mollex

./: .gitignore  README.md  meson.build  meson_options.txt
apps/game_of_life/: game_of_life.pde
src/: detect.cxx  detect.h  globals.cxx  globals.h  mollex.cxx  molluscoid.cxx
